--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mui/icons-material": "^5.14.13",
     "@mui/material": "^5.14.13",
     "axios": "^1.5.1",
+    "node-telegram-bot-api": "^0.63.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
